fixed image src

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="columns">
         <div class="column is-2">
           <figure class="image is-128x128">
-            <img class="is-rounded" src="profile_pic.png">
+            <img class="is-rounded" src="https://github.com/anabellag7/anabellag7-website/blob/master/profile_pic.jpg">
           </figure>
         </div>
         <div class="column">
