# Please enter the commit message for your changes. Lines starting

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </h4>
           <p></p>
           <br>
-          <input type="text" style="position: absolute; left:-9999px;" value="anabellag7@gmail.com" id="email">
+          <input type="text" style="position: absolute; left:-9999px;" value="anabellag7@gmail.com" id="email" disabled>
           <div style="display: flex; align-content: center;">
             <button class="button is-light" onclick="copyText()">anabellag7@gmail.com</button>
             <span id="tooltip" style="display: none; color: #16C60C; margin-left: 10px; margin-top: 8px;">Copied!</span>
