--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Anabella Guimarey</title>
-  <link rel="shortcut icon" href="favicon.png" type="image/png">
-  <link rel="icon" href="favicon.png" type="image/png">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+  <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
@@ -26,7 +26,7 @@
       <div class="columns">
         <div class="column is-2">
           <figure class="image is-128x128">
-            <img class="is-rounded" src="./profile_pic.jpg">
+            <img class="is-rounded" src="img/profile_pic.jpg">
           </figure>
         </div>
         <div class="column">
