--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           <h4 class="subtitle is-4">
             Project Manager✔️
           </h4>
-          <p>Hey there! My name is Anabella Guimarey and I'm a self-taught project manager. I studied geology (and
-            graduated!), worked as a front-end developer, marketer, salesperson, and product manager. Having worn many
-            hats and a passion for technology has helped me become a successful project manager. I'm currently at <a href="https://asapp.com/" target="_blank">ASAPP</a>
+          <p>Hey there! My name is Anabella Guimarey and I'm a self-taught project manager. I studied geology, worked as a front-end developer, marketer, salesperson, and product manager. Having worn many
+            hats and a passion for technology has helped me become a successful project manager. I'm currently at <a
+              href="https://asapp.com/" target="_blank">ASAPP</a>
             leading software development projects to create amazing AI applications in enterprise.
           </p>
           <br>
