adding meta tags

--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
   </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Primary Meta Tags -->
   <title>Anabella Guimarey</title>
+  <meta name="title" content="Anabella Guimarey">
+  <meta name="description" content="">
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://anabellag7.com/">
+  <meta property="og:title" content="Anabella Guimarey">
+  <meta property="og:description" content="">
+  <meta property="og:image" content="">
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://anabellag7.com/">
+  <meta property="twitter:title" content="Anabella Guimarey">
+  <meta property="twitter:description" content="">
+  <meta property="twitter:image" content="">
   <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
@@ -36,7 +51,8 @@
           <h4 class="subtitle is-4">
             Project Manager✔️
           </h4>
-          <p>Hey there! My name is Anabella Guimarey and I'm a self-taught project manager. I studied geology, worked as a front-end developer, marketer, salesperson, and product manager. Having worn many
+          <p>Hey there! My name is Anabella Guimarey and I'm a self-taught project manager. I studied geology, worked as
+            a front-end developer, marketer, salesperson, and product manager. Having worn many
             hats and a passion for technology has helped me become a successful project manager. I'm currently at <a
               href="https://asapp.com/" target="_blank">ASAPP</a>
             leading software development projects to create amazing AI applications in enterprise.
