--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://anabellag7.com/">
   <meta property="twitter:title" content="Anabella Guimarey">
-  <meta property="twitter:description" content="">
+  <meta property="twitter:description" content="Anabella Guimarey">
   <meta property="twitter:image" content="">
   <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   <link rel="icon" href="img/favicon.png" type="image/png">
@@ -41,7 +41,7 @@
       <div class="columns">
         <div class="column is-2">
           <figure class="image is-128x128">
-            <img class="is-rounded" src="img/profile_pic.jpg">
+            <img class="is-rounded" alt="Anabella Guimarey" src="img/profile_pic.jpg">
           </figure>
         </div>
         <div class="column">
