--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             Anabella Guimarey
           </h1>
           <h4 class="subtitle is-4">
-            Project Manager✔️
+            Project Manager
           </h4>
           <p>Hey there! My name is Anabella Guimarey and I'm a self-taught project manager. I studied geology, worked as
             a front-end developer, marketer, salesperson, and product manager. Having worn many
