changed names of links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Primary Meta Tags -->
   <title>Anabella Guimarey</title>
   <meta name="title" content="Anabella Guimarey">
-  <meta name="description" content="">
+  <meta name="description" content="My website">
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://anabellag7.com/">
@@ -27,7 +27,7 @@
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://anabellag7.com/">
   <meta property="twitter:title" content="Anabella Guimarey">
-  <meta property="twitter:description" content="Anabella Guimarey">
+  <meta property="twitter:description" content="">
   <meta property="twitter:image" content="">
   <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   <link rel="icon" href="img/favicon.png" type="image/png">
@@ -75,7 +75,7 @@
             <span class="icon">
               <i class="fab fa-linkedin"></i>
             </span>
-            <span>LinkedIn</span>
+            <span>If you want to hire me</span>
           </a>
         </div>
         <div class="column">
@@ -83,7 +83,7 @@
             <span class="icon">
               <i class="fab fa-medium"></i>
             </span>
-            <span>Blog</span>
+            <span>Know how I think</span>
           </a>
         </div>
         <div class="column">
@@ -91,7 +91,7 @@
             <span class="icon">
               <i class="fab fa-github"></i>
             </span>
-            <span>GitHub</span>
+            <span>See my code</span>
           </a>
         </div>
         <div class="column">
@@ -99,7 +99,7 @@
             <span class="icon">
               <i class="fab fa-angellist"></i>
             </span>
-            <span>AngelList</span>
+            <span>If you like startups too</span>
           </a>
         </div>
       </div>
