--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
           <h4 class="subtitle is-4">
             Project Manager
           </h4>
-          <p>Hey there! My name is Anabella Guimarey and I'm a self-taught project manager. I studied geology, worked as
-            a front-end developer, marketer, salesperson, and product manager. Having worn many
-            hats and a passion for technology has helped me become a successful project manager. I'm currently at <a
+          <p>Hey there! My name is Anabella Guimarey and I'm a Project Manager. I studied geology, worked as
+            a front-end developer, marketer, salesperson, and product manager. Wearing many
+            hats and having a passion for technology has helped me become a successful project manager. I'm currently at <a
               href="https://asapp.com/" target="_blank">ASAPP</a>
             leading software development projects to create amazing AI applications in enterprise.
           </p>
@@ -95,7 +95,7 @@
           </a>
         </div>
         <div class="column">
-          <a class="button  is-white" href="https://angel.co/u/ana07" target="_blank">
+          <a class="button  is-white" href="https://angel.co/ana07" target="_blank">
             <span class="icon">
               <i class="fab fa-angellist"></i>
             </span>
