--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
           <h4 class="subtitle is-4">
             Project Manager
           </h4>
-          <p>Hey there! My name is Anabella Guimarey and I'm a Project Manager. I studied geology, worked as
+          <p>Hello. My name is Anabella Guimarey and I'm a Project Manager. I studied geology, worked as
             a front-end developer, marketer, salesperson, and product manager. Wearing many
             hats and having a passion for technology has helped me become a successful project manager. I'm currently at <a
               href="https://asapp.com/" target="_blank">ASAPP</a>
-            leading software development projects to create amazing AI applications in enterprise.
+            leading software development projects to create amazing AI applications in enterprise. Check out my <a href="https://www.linkedin.com/in/anabellaguimarey/">LinkedIn</a>, my <a href="https://medium.com/@anabellag7">Blog</a>, and the <a href="https://github.com/anabellag7">code</a> I built to create this website.
           </p>
+          <br>
+          <p>Download my <a href="docs/Guimarey_Anabella_Resume.pdf">resume</a> here.</p>
           <br>
           <input type="text" style="position: absolute; left:-9999px;" value="anabellag7@gmail.com" id="email">
           <div style="display: flex; align-content: center;">
@@ -66,46 +68,7 @@
         </div>
       </div>
     </div>
-    <div class="container" style="margin-top: 2rem;">
-      <div class="columns">
-        <div class="column is-2">
-        </div>
-        <div class="column">
-          <a class="button is-white" href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">
-            <span class="icon">
-              <i class="fab fa-linkedin"></i>
-            </span>
-            <span>If you want to hire me</span>
-          </a>
-        </div>
-        <div class="column">
-          <a class="button  is-white" href="https://medium.com/@anabellag7" target="_blank">
-            <span class="icon">
-              <i class="fab fa-medium"></i>
-            </span>
-            <span>Know how I think</span>
-          </a>
-        </div>
-        <div class="column">
-          <a class="button  is-white" href="https://github.com/anabellag7" target="_blank">
-            <span class="icon">
-              <i class="fab fa-github"></i>
-            </span>
-            <span>See my code</span>
-          </a>
-        </div>
-        <div class="column">
-          <a class="button  is-white" href="https://angel.co/ana07" target="_blank">
-            <span class="icon">
-              <i class="fab fa-angellist"></i>
-            </span>
-            <span>If you like startups too</span>
-          </a>
-        </div>
-      </div>
-    </div>
   </section>
 </body>
 <script src="js/script.js"></script>
-
 </html>
