--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
             a front-end developer, marketer, salesperson, and product manager. Wearing many
             hats and having a passion for technology has helped me become a successful project manager. I'm currently at <a
               href="https://asapp.com/" target="_blank">ASAPP</a>
-            leading software development projects to create amazing AI applications in enterprise. Check out my <a href="https://www.linkedin.com/in/anabellaguimarey/">LinkedIn</a>, my <a href="https://medium.com/@anabellag7">Blog</a>, and the <a href="https://github.com/anabellag7">code</a> I built to create this website.
+            leading software development projects to create amazing AI applications in enterprise. Check out my <a href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">LinkedIn</a>, my <a href="https://medium.com/@anabellag7" target="_blank">blog</a>, and the <a href="https://github.com/anabellag7" target="_blank">code</a> I built to create this website.
           </p>
           <br>
-          <p>Download my <a href="docs/Guimarey_Anabella_Resume.pdf">resume</a> here.</p>
+          <p>Download my <a href="docs/Guimarey_Anabella_Resume.pdf" target="_blank">resume</a> here.</p>
+          <br>
+          <p>Click on the button below to copy my email.</p>
           <br>
           <input type="text" style="position: absolute; left:-9999px;" value="anabellag7@gmail.com" id="email">
           <div style="display: flex; align-content: center;">
