--- a/index.html
+++ b/index.html
@@ -13,22 +13,9 @@
   </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Primary Meta Tags -->
   <title>Anabella Guimarey</title>
   <meta name="title" content="Anabella Guimarey">
   <meta name="description" content="My website">
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://anabellag7.com/">
-  <meta property="og:title" content="Anabella Guimarey">
-  <meta property="og:description" content="">
-  <meta property="og:image" content="">
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://anabellag7.com/">
-  <meta property="twitter:title" content="Anabella Guimarey">
-  <meta property="twitter:description" content="">
-  <meta property="twitter:image" content="">
   <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
@@ -53,14 +40,19 @@
           </h4>
           <p>Hello. My name is Anabella Guimarey and I'm a Project Manager. I studied geology, worked as
             a front-end developer, marketer, salesperson, and product manager. Wearing many
-            hats and having a passion for technology has helped me become a successful project manager. I'm currently at <a
-              href="https://asapp.com/" target="_blank">ASAPP</a>
-            leading software development projects to create amazing AI applications in enterprise. Check out my <a href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">LinkedIn</a>, my <a href="https://medium.com/@anabellag7" target="_blank">blog</a>, and the <a href="https://github.com/anabellag7" target="_blank">code</a> I built to create this website.
+            hats and having a passion for technology has helped me become a successful project manager.
           </p>
           <br>
-          <p>Download my <a href="docs/Guimarey_Anabella_Resume.pdf" target="_blank">resume</a> here.</p>
+          <p>I'm currently at <a
+            href="https://asapp.com/" target="_blank">ASAPP</a>
+          leading software development projects to create amazing AI applications in enterprise.</p>
           <br>
-          <p>Click on the button below to copy my email.</p>
+          <p>🌐 Check out my <a href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">LinkedIn</a>, my <a href="https://medium.com/@anabellag7" target="_blank">blog,</a> some of my <a href="https://www.researchgate.net/profile/Anabella_Guimarey" target="_blank">research</a>, and the <a href="https://github.com/anabellag7" target="_blank">code</a> I built to create this website.
+          </p>
+          <br>
+          <p>📋 Download my <a href="docs/Guimarey_Anabella_Resume.pdf" target="_blank">resume</a>.</p>
+          <br>
+          <p>👇 Click on the button below to copy my email.</p>
           <br>
           <input type="text" style="position: absolute; left:-9999px;" value="anabellag7@gmail.com" id="email">
           <div style="display: flex; align-content: center;">
