--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
     gtag('config', 'UA-166789743-1');
   </script>
+  <title>I'm Anabella Guimarey - Project Manager</title>
   <meta charset="utf-8">
+  <meta name="description" content="Anabella Guimarey Project Manager">
+  <meta name="keywords" content="anabella guimarey, project manager">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Anabella Guimarey</title>
-  <meta name="title" content="Anabella Guimarey">
-  <meta name="description" content="My website">
   <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
