Updated index.html and changed meta tags

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     gtag('config', 'UA-166789743-1');
   </script>
-  <title>I'm Anabella Guimarey - Project Manager</title>
+  <title>I'm Anabella Guimarey, a Technical Project Manager</title>
   <meta charset="utf-8">
-  <meta name="description" content="Anabella Guimarey Project Manager">
-  <meta name="keywords" content="anabella guimarey, project manager">
+  <meta name="description" content="Anabella Guimarey Technical Project Manager">
+  <meta name="keywords" content="anabella guimarey, technical project manager">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="img/favicon.png" type="image/png">
   <link rel="icon" href="img/favicon.png" type="image/png">
@@ -36,16 +36,16 @@
             Anabella Guimarey
           </h1>
           <h4 class="subtitle is-4">
-            Project Manager
+            Technical Project Manager
           </h4>
-          <p>Hello. My name is Anabella Guimarey and I'm a Project Manager. I studied geology, worked as
-            a front-end developer, marketer, salesperson, and product manager. Wearing many
-            hats and having a passion for technology has helped me become a successful project manager.
+          <p>Hello! My name is Anabella Guimarey, and I'm a Technical Project Manager. Officially, my job is to manage projects from start to finish. But really? I get the job done by standing up for the project. My superpowers are: building strong relationships, focusing on the business benefits and taking a look at the big picture.
+          </p>
+          <br>
+          <p>My background is in geology, but I've also worked as a front-end developer, marketer, salesperson, and product manager. Wearing many hats and having a passion for technology has helped me become a successful technical project manager.
           </p>
           <br>
           <p>I'm currently at <a
-            href="https://asapp.com/" target="_blank">ASAPP</a>
-          leading software development projects to create amazing AI applications in enterprise.</p>
+            href="https://asapp.com/" target="_blank">ASAPP</a>, leading software development projects to create amazing AI applications in enterprise and pursuing a master's degree in Information Technology at <a href="https://www.palermo.edu/">Universidad de Palermo</a>.</p>
           <br>
           <p>🌐 Check out my <a href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">LinkedIn</a>, my <a href="https://medium.com/@anabellag7" target="_blank">blog,</a> some of my <a href="https://www.researchgate.net/profile/Anabella_Guimarey" target="_blank">research</a>, and the <a href="https://github.com/anabellag7" target="_blank">code</a> I built to create this website.
           </p>
