--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </script>
   <title>I'm Anabella Guimarey, a Technical Project Manager</title>
   <meta charset="utf-8">
-  <meta name="description" content="Anabella Guimarey Technical Project Manager">
+  <meta name="description" content="Anabella Guimarey is a Technical Project Manager with experience managing complex projects at fast-paced startups.">
   <meta name="keywords" content="anabella guimarey, technical project manager">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="img/favicon.png" type="image/png">
