--- a/index.html
+++ b/index.html
@@ -20,10 +20,32 @@
   <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.2/css/bulma.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+  <style>
+    section {
+      margin-top: 3rem;
+    }
+
+    .email {
+      position: absolute;
+      left:-9999px;
+    }
+
+    .div-email {
+      display: flex;
+      align-content: center;
+    }
+
+    .copied-tooltip {
+      display: none;
+      color: #16C60C;
+      margin-left: 10px;
+      margin-top: 8px;
+    }
+  </style>
 </head>
 
 <body>
-  <section class="section" style="margin-top: 3rem;">
+  <section class="section">
     <div class="container">
       <div class="columns">
         <div class="column is-2">
@@ -54,10 +76,10 @@
           <br>
           <p>👇 Click on the button below to copy my email.</p>
           <br>
-          <input type="text" style="position: absolute; left:-9999px;" value="anabellag7@gmail.com" id="email">
-          <div style="display: flex; align-content: center;">
+          <input type="text" class="email" value="anabellag7@gmail.com" id="email">
+          <div class="div-email">
             <button class="button is-light" onclick="copyText()">anabellag7@gmail.com</button>
-            <span id="tooltip" style="display: none; color: #16C60C; margin-left: 10px; margin-top: 8px;">Copied!</span>
+            <span id="tooltip" class="copied-tooltip">Copied!</span>
           </div>
         </div>
       </div>
