--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </p>
           <br>
           <p>I'm currently at <a
-            href="https://asapp.com/" target="_blank">ASAPP</a>, leading software development projects to create amazing AI applications in enterprise and pursuing a master's degree in Information Technology at <a href="https://www.palermo.edu/" target="_blank">Universidad de Palermo</a>.</p>
+            href="https://asapp.com/" target="_blank">ASAPP</a>, leading software development projects to create amazing AI applications in enterprise and, pursuing a master's degree in Information Technology at <a href="https://www.palermo.edu/" target="_blank">Universidad de Palermo</a>.</p>
           <br>
           <p>🌐 Check out my <a href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">LinkedIn</a>, my <a href="https://medium.com/@anabellag7" target="_blank">blog,</a> some of my <a href="https://www.researchgate.net/profile/Anabella_Guimarey" target="_blank">research</a>, and the <a href="https://github.com/anabellag7" target="_blank">code</a> I built to create this website.
           </p>
