trying to remove focus with readonly
this should prevent the keyboard to pop when clicking on the button (which has an input hidden)

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <br>
           <p>👇 Click on the button below to copy my email.</p>
           <br>
-          <input type="text" class="email" value="anabellag7@gmail.com" id="email">
+          <input type="text" class="email" value="anabellag7@gmail.com" id="email" readonly>
           <div class="div-email">
             <button class="button is-light" onclick="copyText()">anabellag7@gmail.com</button>
             <span id="tooltip" class="copied-tooltip">Copied!</span>
