--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
       margin-top: 3rem;
     }
 
+    .container {
+      max-width: 60rem;
+    }
+
     .email {
       position: absolute;
       left:-9999px;
@@ -60,26 +64,26 @@
           <h4 class="subtitle is-4">
             Technical Project Manager
           </h4>
-          <p>Hello! My name is Anabella Guimarey, and I'm a Technical Project Manager. Officially, my job is to manage projects from start to finish. But really? I get the job done by standing up for the project. My superpowers are: building strong relationships, focusing on the business benefits and taking a look at the big picture.
+          <p class="is-size-5">Hello! My name is Anabella Guimarey, and I'm a Technical Project Manager. Officially, my job is to manage projects from start to finish. But really? I get the job done by standing up for the project. My superpowers are: building strong relationships, focusing on the business benefits and taking a look at the big picture.
           </p>
           <br>
-          <p>My background is in geology, but I've also worked as a front-end developer, marketer, salesperson, and product manager. Wearing many hats and having a passion for technology has helped me become a successful technical project manager.
+          <p class="is-size-5">My background is in geology, but I've also worked as a front-end developer, marketer, salesperson, and product manager. Wearing many hats and having a passion for technology has helped me become a successful technical project manager.
           </p>
           <br>
-          <p>I'm currently at <a
+          <p class="is-size-5">I'm currently at <a
             href="https://asapp.com/" target="_blank">ASAPP</a>, leading software development projects to create amazing AI applications in enterprise and, pursuing a master's degree in Information Technology at <a href="https://www.palermo.edu/" target="_blank">Universidad de Palermo</a>.</p>
           <br>
-          <p>🌐 Check out my <a href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">LinkedIn</a>, my <a href="https://medium.com/@anabellag7" target="_blank">blog,</a> some of my <a href="https://www.researchgate.net/profile/Anabella_Guimarey" target="_blank">research</a>, and the <a href="https://github.com/anabellag7" target="_blank">code</a> I built to create this website.
+          <p class="is-size-5">🌐 Check out my <a href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">LinkedIn</a>, my <a href="https://medium.com/@anabellag7" target="_blank">blog,</a> some of my <a href="https://www.researchgate.net/profile/Anabella_Guimarey" target="_blank">research</a>, and the <a href="https://github.com/anabellag7" target="_blank">code</a> I built to create this website.
           </p>
           <br>
-          <p>📋 Download my <a href="docs/Guimarey_Anabella_Resume.pdf" target="_blank">resume</a>.</p>
+          <p class="is-size-5">📋 Download my <a href="docs/Guimarey_Anabella_Resume.pdf" target="_blank">resume</a>.</p>
           <br>
-          <p>👇 Click on the button below to copy my email.</p>
+          <p class="is-size-5">👇 Click on the button below to copy my email.</p>
           <br>
           <input type="text" class="email" value="anabellag7@gmail.com" id="email" readonly>
           <div class="div-email">
-            <button class="button is-light" onclick="copyText()">anabellag7@gmail.com</button>
-            <span id="tooltip" class="copied-tooltip">Copied!</span>
+            <button class="button is-light is-size-5" onclick="copyText()">anabellag7@gmail.com</button>
+            <span id="tooltip" class="copied-tooltip is-size-5">Copied!</span>
           </div>
         </div>
       </div>
