Created style sheet and posts sheet

--- a/posts.html
+++ b/posts.html
@@ -1,8 +1,53 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166789743-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-166789743-1');
+  </script>
+  <title>I'm Anabella Guimarey, a Technical Project Manager</title>
+  <meta charset="utf-8">
+  <meta name="description" content="Anabella Guimarey is a Technical Project Manager with experience managing complex projects at fast-paced startups.">
+  <meta name="keywords" content="anabella guimarey, technical project manager">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/png">
+  <link rel="icon" href="img/favicon.png" type="image/png">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+
 <body>
-    
+  <section>
+    <div class="container">
+      <img class="round" alt="Anabella Guimarey" src="img/profile_pic.jpg">
+      <div class="links">
+        <a href="index.html">About</a>
+      </div> 
+      <hr class="line">
+      <h2>
+        Blog
+      </h2>
+
+      <h2>
+        Research
+      </h2>
+      <br>
+      <hr class="line">
+      <p><a href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">LinkedIn</a>
+        <a href="https://medium.com/@anabellag7" target="_blank">Blog</a>
+        <a href="https://github.com/anabellag7" target="_blank">Github</a>
+        <a href="https://twitter.com/anabellag7_" target="_blank">Twitter</a>
+      </p>
+    </div>
+  </section>
 </body>
 
+<script src="js/script.js"></script>
 </html>
