--- a/index.html
+++ b/index.html
@@ -20,78 +20,16 @@
   <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      line-height: 1.5;
-      color: black;
-    }
-    
-    section {
-      margin-top: 3rem;
-    }
-
-    .container {
-      max-width: 600px;
-      margin: 0 auto;
-    }
-
-    img {
-      border-radius: 50%;
-      max-width: 28%;
-      height: auto;
-    }
-
-    hr.line {
-      border: 1px solid darkgrey;
-    }
-
-    .links {
-      text-align: right;
-    }
-
-    .subtitle {
-      color: gray;
-
-    }
-
-    .email {
-      position: absolute;
-      left:-9999px;
-    }
-
-    .button {
-      background-color: #e7e7e7; /* Green */
-      border: none;
-      border-radius: 4px;
-      color: black;
-      padding: 15px 32px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      margin: 4px 2px;
-      cursor: pointer;
-    }
-
-    .div-email {
-      display: flex;
-      align-content: center;
-    }
-
-    .copied-tooltip {
-      display: none;
-      color: #16C60C;
-      margin-left: 10px;
-      margin-top: 9px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <section>
     <div class="container">
       <img class="round" alt="Anabella Guimarey" src="img/profile_pic.jpg">
+      <div class="links">
+        <a href="posts.html">Posts</a>
+      </div> 
       <hr class="line">
       <h1>
         Anabella Guimarey
@@ -120,5 +58,6 @@
     </div>
   </section>
 </body>
+
 <script src="js/script.js"></script>
 </html>
