Added blog and research pages

--- a/index.html
+++ b/index.html
@@ -27,16 +27,18 @@
   <section>
     <div class="container">
       <img class="round" alt="Anabella Guimarey" src="img/profile_pic.jpg">
-      <div class="links">
-        <a href="posts.html">Posts</a>
-      </div> 
-      <hr class="line">
       <h1>
         Anabella Guimarey
       </h1>
       <h3 class="subtitle">
         Technical Project Manager
       </h3>
+      <div class="links">
+        <a href="research.html">Research</a>
+        <a href="blog.html">Blog</a>
+      </div> 
+      <hr class="line">
+      
       <p>Hello! My name is Anabella Guimarey, and I'm a Technical Project Manager.
       </p>
       <p>I'm currently at <a
