--- a/research.html
+++ b/research.html
@@ -27,17 +27,33 @@
   <section>
     <div class="container">
       <img class="round" alt="Anabella Guimarey" src="img/profile_pic.jpg">
+      <h1>
+        Anabella Guimarey
+      </h1>
+      <h3 class="subtitle">
+        Technical Project Manager
+      </h3>
       <div class="links">
         <a href="index.html">About</a>
+        <a href="blog.html">Blog</a>
       </div> 
-      <hr class="line">
-      <h2>
-        Blog
-      </h2>
-
-      <h2>
+      <hr class="line">     
+     <h2>
         Research
       </h2>
+     
+      <article>
+        <h3>Análisis de datos para predecir lesiones deportivas</h3>
+        <p>Las lesiones tienen un gran impacto en el deporte profesional, especialmente en los deportes colectivos, debido a su gran influencia en el desempeño del equipo y a los importantes costos involucrados en la rehabilitación de jugadores...<a href="https://www.researchgate.net/publication/348309581_Analisis_de_datos_para_predecir_lesiones_deportivas" target="_blank">Continue reading</a></p>
+        <p class="date">September 2020</p>
+      </article>
+
+      <article>
+        <h3>Beneficios y riesgos de migrar una arquitectura monolítica a microservicios</h3>
+        <p>Cuando se implementa correctamente, la arquitectura de microservicios presenta una alternativa flexible y escalable a los sistemas monolíticos heredados...<a href="https://www.researchgate.net/publication/348309479_Beneficios_y_riesgos_de_migrar_una_arquitectura_monolitica_a_microservicios" target="_blank">Continue reading</a>
+        </p>
+        <p class="date">July 2020</p>
+      </article>
       <br>
       <hr class="line">
       <p><a href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">LinkedIn</a>
