changed img and favicon

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <section>
     <div class="container">
-      <img class="round" alt="Anabella Guimarey" src="img/profile_pic.jpg">
+      <img alt="Anabella Guimarey" src="img/profile_pic.jpg">
       <h1>
         Anabella Guimarey
       </h1>
