--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       </p>
       <p>I'm currently at <a
         href="https://asapp.com/" target="_blank">ASAPP</a>, leading software development projects to create amazing AI applications in enterprise and, pursuing a master's degree in Information Technology at <a href="https://www.palermo.edu/" target="_blank">Universidad de Palermo</a>.</p>
-      <p>📋 Download my <a href="docs/Guimarey_Anabella_Resume.pdf" target="_blank">resume</a>.</p>
-      <p>👇 Click on the button below to copy my email.</p>
+      <p>📋 Download my <a href="docs/Resume_Anabella_Guimarey_2021.pdf" target="_blank">resume</a> (August 2021).</p>
+      <p>👇 Click the button below to copy my email.</p>
       <input type="text" class="email" value="anabellag7@gmail.com" id="email" readonly>
       <div class="div-email">
         <button class="button" onclick="copyText()">anabellag7@gmail.com</button>
