--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div> 
       <hr class="line">
       
-      <p>Hello! My name is Anabella Guimarey, and I'm a Technical Project Manager. Which really means I manage technical projects, from start to finish. Which really means I work with senior engineers to help them cross the finish line.
+      <p>Hello! My name is Anabella Guimarey, and I'm a Technical Project Manager. Which really means I manage technical projects, from start to finish.
       </p>
       <p>I’m currently working at <a href="https://www.autocloud.dev/" target="_blank">AutoCloud</a> and pursuing a master's degree in Information Technology at <a href="https://www.palermo.edu/" target="_blank">Universidad de Palermo</a>.</p>
       <p>📋 Download my <a href="docs/Resume_Anabella_Guimarey_2021.pdf" target="_blank">resume</a> (August 2021).</p>
