update to index

--- a/research.html
+++ b/research.html
@@ -57,7 +57,7 @@
       <br>
       <hr class="line">
       <p><a href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">LinkedIn</a>
-        <a href="https://medium.com/@anabellag7" target="_blank">Blog</a>
+        <a href="https://medium.com/@anabellag7" target="_blank">Medium</a>
         <a href="https://github.com/anabellag7" target="_blank">Github</a>
         <a href="https://twitter.com/anabellag7_" target="_blank">Twitter</a>
       </p>
