--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <p>Hello! My name is Anabella Guimarey, and I'm a Technical Project Manager. Which really means I manage technical projects, from start to finish.
       </p>
       <p>I’m currently working at <a href="https://www.autocloud.dev/" target="_blank">AutoCloud</a> and pursuing a master's degree in Information Technology at <a href="https://www.palermo.edu/" target="_blank">Universidad de Palermo</a>.</p>
-      <p>📋 Download my <a href="docs/Resume_Anabella_Guimarey_2021.pdf" target="_blank">resume</a> (August 2021).</p>
-      <p>👇 Click the button below to copy my email.</p>
+      <p>📋 Download my <a href="docs/Resume_AnabellaGuimarey_2021.pdf" target="_blank">resume</a>.</p>
+      <p>👇 Get in touch! Click the button below to copy my email.</p>
       <input type="text" class="email" value="anabellag7@gmail.com" id="email" readonly>
       <div class="div-email">
         <button class="button" onclick="copyText()">anabellag7@gmail.com</button>
@@ -52,7 +52,7 @@
       <br>
       <hr class="line">
       <p><a href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">LinkedIn</a>
-        <a href="https://medium.com/@anabellag7" target="_blank">Blog</a>
+        <a href="https://medium.com/@anabellag7" target="_blank">Medium</a>
         <a href="https://github.com/anabellag7" target="_blank">Github</a>
         <a href="https://twitter.com/anabellag7_" target="_blank">Twitter</a>
       </p>
