added one article
p2p networks article added

--- a/research.html
+++ b/research.html
@@ -43,11 +43,15 @@
       </h2>
      
       <article>
+        <h3>Redes P2P: Análisis de AirDrop y Nearby Share, de Apple y Google</h3>
+        <p>Las redes P2P son convenientes para los usuarios de estos dispositivos por su facilidad y velocidad de compartir archivos, pero se han descubierto defectos de seguridad y privacidad. Demostraremos experimentalmente los riesgos de compartir archivos con estas redes P2P...<a href="https://www.researchgate.net/publication/357158374_Redes_P2P_Analisis_de_AirDrop_y_Nearby_Share_de_Apple_y_Google" target="_blank">Continue reading</a></p>
+        <p class="date">November 2021</p>
+      </article>
+      <article>
         <h3>Análisis de datos para predecir lesiones deportivas</h3>
         <p>Las lesiones tienen un gran impacto en el deporte profesional, especialmente en los deportes colectivos, debido a su gran influencia en el desempeño del equipo y a los importantes costos involucrados en la rehabilitación de jugadores...<a href="https://www.researchgate.net/publication/348309581_Analisis_de_datos_para_predecir_lesiones_deportivas" target="_blank">Continue reading</a></p>
         <p class="date">September 2020</p>
       </article>
-
       <article>
         <h3>Beneficios y riesgos de migrar una arquitectura monolítica a microservicios</h3>
         <p>Cuando se implementa correctamente, la arquitectura de microservicios presenta una alternativa flexible y escalable a los sistemas monolíticos heredados...<a href="https://www.researchgate.net/publication/348309479_Beneficios_y_riesgos_de_migrar_una_arquitectura_monolitica_a_microservicios" target="_blank">Continue reading</a>
