--- a/research.html
+++ b/research.html
@@ -41,6 +41,8 @@
      <h2>
         Research
       </h2>
+
+      <p>Most of my research was done during my Master's degree at Universidad de Palermo. All articles are in Spanish.</p>
      
       <article>
         <h3>Redes P2P: Análisis de AirDrop y Nearby Share, de Apple y Google</h3>
