added startup advisor copy and small change in blog

--- a/blog.html
+++ b/blog.html
@@ -41,6 +41,7 @@
      <h2>
         Blog
       </h2>
+      <p>All of these posts are in my Medium blog.</p>
       <article>
         <h3>Cuando las retrospectivas no funcionan: un ejercicio para obtener accionables</h3>
         <p>A veces las retrospectivas se vuelven monótonas, se mencionan las mismas cosas una y otra vez y se llega a muy pocas tareas accionables. Una alternativa para mejorar esto es cambiar la dinámica de la reunión al introducir un ejercicio nuevo...<a href="https://anabellag7.medium.com/cuando-las-retrospectivas-no-funcionan-un-ejercicio-para-obtener-accionables-c1476efd9ec6" target="_blank">Read more</a></p>
