--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     gtag('config', 'UA-166789743-1');
   </script>
-  <title>I'm Anabella Guimarey, a Technical Project Manager</title>
+  <title>I'm Anabella Guimarey, a Technical Project Manager and Startup Advisor</title>
   <meta charset="utf-8">
   <meta name="description" content="Anabella Guimarey is a Technical Project Manager with experience managing complex projects at fast-paced startups.">
   <meta name="keywords" content="anabella guimarey, technical project manager">
@@ -31,7 +31,7 @@
         Anabella Guimarey
       </h1>
       <h3 class="subtitle">
-        Technical Project Manager
+        Technical Project Manager - Startup Advisor
       </h3>
       <div class="links">
         <a href="research.html">Research</a>
@@ -39,17 +39,18 @@
       </div> 
       <hr class="line">
       
-      <p>Hello! My name is Anabella Guimarey, and I'm a Technical Project Manager. Which really means I manage technical projects, from start to finish.
-      </p>
-      <p>I’m currently working at <a href="https://www.autocloud.dev/" target="_blank">AutoCloud</a> and pursuing a master's degree in Information Technology at <a href="https://www.palermo.edu/" target="_blank">Universidad de Palermo</a>.</p>
-      <p>📋 Download my <a href="docs/Resume_AnabellaGuimarey_2021.pdf" target="_blank">resume</a>.</p>
-      <p>👇 Get in touch! Click the button below to copy my email.</p>
+      <p>Hello! My name is Anabella Guimarey, and I'm a Technical Project Manager. Which really means I manage technical projects, from start to finish. I’m currently working at <a href="https://www.autocloud.dev/" target="_blank">AutoCloud</a> and pursuing a master's degree in Information Technology at <a href="https://www.palermo.edu/" target="_blank">Universidad de Palermo</a>.</p>
+      <p>As an entrepreneur, I've also advised startups on scaling up their operations, improve their marketing plan and go-to-market strategies.</p>
+  
+      
+      <p>Get in touch! Click the button below to copy my email.</p>
       <input type="text" class="email" value="anabellag7@gmail.com" id="email" readonly>
       <div class="div-email">
         <button class="button" onclick="copyText()">anabellag7@gmail.com</button>
         <span id="tooltip" class="copied-tooltip">Copied!</span>
       </div>
-      <br>
+      <p>Download my <a href="docs/Resume_AnabellaGuimarey_2021.pdf" target="_blank">resume</a>.</p>
+
       <hr class="line">
       <p><a href="https://www.linkedin.com/in/anabellaguimarey/" target="_blank">LinkedIn</a>
         <a href="https://medium.com/@anabellag7" target="_blank">Medium</a>
