--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       
       <p>Hello! My name is Anabella Guimarey, and I'm a Technical Project Manager. Which really means I manage technical projects, from start to finish. I’m currently working at <a href="https://www.autocloud.dev/" target="_blank">AutoCloud</a> and pursuing a master's degree in Information Technology at <a href="https://www.palermo.edu/" target="_blank">Universidad de Palermo</a>.</p>
       <p>As an entrepreneur, I've also advised startups on scaling up their operations, improve their marketing plan and go-to-market strategies.</p>
-  
       
-      <p>Get in touch! Click the button below to copy my email.</p>
+      <p>Need free advice? Get in touch!</p>
+      <p>Click the button below to copy my email.</p>
       <input type="text" class="email" value="anabellag7@gmail.com" id="email" readonly>
       <div class="div-email">
         <button class="button" onclick="copyText()">anabellag7@gmail.com</button>
